<resources>
    <string name="app_name">DigiPass</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name_first">First name</string>
    <string name="prompt_name_last">Last name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Registehoiohiojipor</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="activity_log">Activity log</string>
    <string name="pending_requests">Pending requests</string>

    <string name="ok">@android:string/ok</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_home">Digipass</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_text_settings">Settings</string>
    <string name="nav_text_help"><![CDATA[Help & feedback]]></string>
    <string name="nav_text_home">Home</string>
    <string name="nav_text_preferences">Preferences</string>
    <string name="nav_text_permissions">Permissions</string>
    <string name="nav_text_activity_log">Activity log</string>
    <string name="nav_text_contacts">Contacts</string>
    <string name="thumb_description">Image or icon with list item</string>
    <string name="preferences">Preferences</string>
    <string name="categories">Groups</string>
    <string name="no_requests">There are no pending requests at the moment…</string>
    <string name="no_activities">There are no activities yet…</string>
    <string name="io_connected">Connected!</string>
    <string name="lost_connection">No active connection found! Retrying to connect…</string>
    <string name="what_now">What now?</string>
    <string name="title_permissions">Permissions</string>
    <string name="status_icon_description">Icon to represent current status of listitem</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="menu_refresh">Refresh app</string>
    <string name="title_settings">Settings</string>
    <string name="logout">Logout</string>
</resources>
