<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/menu_main" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_text_home" />
        <item
            android:id="@+id/nav_preferences"
            android:icon="@drawable/ic_preferences"
            android:title="@string/nav_text_preferences" />
        <item
            android:id="@+id/nav_permissions"
            android:icon="@drawable/ic_lock_open"
            android:title="@string/nav_text_permissions" />
        <item
            android:id="@+id/nav_activity_log"
            android:icon="@drawable/ic_activity_log"
            android:title="@string/nav_text_activity_log" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts"
            android:title="@string/nav_text_contacts" />
    </group>

    <group android:id="@+id/menu_footer" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_text_settings" />
        <item
            android:id="@+id/nav_help_feedback"
            android:icon="@drawable/ic_help_feedback"
            android:title="@string/nav_text_help" />
    </group>

</menu>
